--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <html>
   <head>
 		<title>Colorful Image Colorization</title>
-		<meta property="og:image" content="http://richzhang.github.io/colorization/resources/images/teaser3.jpg"/>
+		<meta property="og:image" content="./Image/me33.jpg"/>
 		<meta property="og:title" content="Colorful Image Colorization " />
   </head>
 
