--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   			  <tr>
   	              <td width=400px>
   					<center>
-  	                	<a href="./Images/me33.jpg"><img class="rounded" src = "./Images/me33.jpg" height="500px"></img></href></a><br>
+  	                	<a href="./Image/me33.jpg"><img class="rounded" src = "./Image/me33.jpg" height="500px"></img></href></a><br>
 					</center>
   	              </td>
                 </tr>
